fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ body,
   opacity: 1;
   display: grid;
   grid-template-columns: minmax(0, 300px) auto;
-  grid-template-rows: auto min-content auto 50px;
+  grid-template-rows: auto min-content auto min-content;
   grid-template-areas:
     "jumps parents "
     "jumps thought "
@@ -134,6 +134,7 @@ body,
   border-width: 1px;
   direction: rtl;
   padding-right: 130px;
+  padding-bottom: 0px;
 }
 
 .thought {
